--- a/templates/index.html
+++ b/templates/index.html
@@ -15,13 +15,12 @@
             </form>
         </div>
 
-
         <div class = "number-box">
             <h1> {{number}} </h1>
         </div>
         
         <ul>
-        {% for i in range(0, 10) %}
+        {% for i in range(0, number) %}
             <li>
                 <em>{{i}}</em>
             </li>
